[package]
name = "default-net"
version = "0.13.0"
authors = ["shellrow <shellrow@protonmail.com>"]
edition = "2021"
description = "Cross-platform library for network interface and gateway"
repository = "https://github.com/shellrow/default-net"
readme = "README.md"
keywords = ["network"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
bytes = "1.4.0"
libc = "0.2"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
netlink-packet-core = "0.5.0"
netlink-packet-route = "0.15.0"
netlink-sys = "0.8.5"

[target.'cfg(target_os = "android")'.dependencies]
dlopen = "0.1.8"
once_cell = "1.17.1"

[target.'cfg(windows)'.dependencies]
memalloc = "0.1.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.32.0"
features = ["Win32_Foundation","Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock"]

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
system-configuration = "0.5.0"
